--- a/portal/px-nissa/salespurchase/23-24/sp23-24.html
+++ b/portal/px-nissa/salespurchase/23-24/sp23-24.html
@@ -13,24 +13,24 @@
 <!-- Fonts -->
   <link href="https://fonts.googleapis.com/" rel="preconnect">
   <link href="https://fonts.gstatic.com/" rel="preconnect" crossorigin="">
-  <link href="../portal_files/css2" rel="stylesheet">
+  <link href="../../../portal_files/css2" rel="stylesheet">
 
 <!-- Vendor CSS Files -->
- <link href="../portal_files/bootstrap.min.css" rel="stylesheet">
-  <link href="../portal_files/bootstrap-icons.css" rel="stylesheet">
-  <link href="../portal_files/glightbox.min.css" rel="stylesheet">
-  <link href="../portal_files/swiper-bundle.min.css" rel="stylesheet">
+ <link href="../../../portal_files/bootstrap.min.css" rel="stylesheet">
+  <link href="../../../portal_files/bootstrap-icons.css" rel="stylesheet">
+  <link href="../../../portal_files/glightbox.min.css" rel="stylesheet">
+  <link href="../../../portal_files/swiper-bundle.min.css" rel="stylesheet">
   
   <!-- Main CSS File -->
-    <link href="../portal_files/style2.css" rel="stylesheet">
+    <link href="../../../portal_files/style2.css" rel="stylesheet">
 
 
 <head>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fleet Discount</title>
-    <link rel="stylesheet" href="../portal_files/style2.css">  
+    <title>Sales Purchase 23-24</title>
+    <link rel="stylesheet" href="../../../portal_files/style2.css">  
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>	
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
@@ -39,7 +39,7 @@
 <body class="index-page" data-aos-easing="ease-in-out" data-aos-duration="800" data-aos-delay="0">
     <nav>
         <div class="logo">
-            <h1>Fleet Through RO</h1>
+            <h1>Sales Purchase 23-24</h1>
        </div>
         	 <ul id="menuList">	
 		<p></p>
@@ -48,7 +48,7 @@
 		<li><a href="brlp.html">Barrel Price</a></li>
 		 <button class="btn btn-primary" onclick="downloadPDF()">Download PDF</button> 
 		<button class="btn btn-primary" onclick="portal.html" type="button">
-            <li><a href="../portal.html">Home</a></li>
+            <li><a href="../../../portal.html">Home</a></li>
           
         </ul>
         <div class="menu-icon">
@@ -178,35 +178,28 @@ th, td {
  <table id="myTable">
  <thead>  
 <tr>
-<th>MAT CODE</th>
-<th>Material Name</th>
-<th>RSP( PER L )</th>
-<th>PROPOSED FLEET THROUGH RO DISCOUNT /L</th>
-<th>PER BRL COSTING INC.GST</th>
-<th>RESELLER DISCOUNT-Q4</th>
-<th>DISCOUNT TO BE UPLAODED IN SDMS</th>
+<th>Month</th>
+<th>Sales 23-24 Liters</th>
+<th>Primary 23-24 </th>
 
 </tr>
   
 </thead>
   <tbody>
   
-<tr> <td>2502401</td><td>SERVO GEAR HP 90</td><td>229</td><td>71</td><td>39152</td><td>28</td><td>43</td></tr>
-<tr> <td>2503401</td><td>SERVO GEAR HP 140</td><td>245</td><td>77</td><td>41630</td><td>28</td><td>49</td></tr>
-<tr> <td>7436401</td><td>SERVO PRIDE NXT CK4 15W-40</td><td>255</td><td>79</td><td>43613</td><td>30</td><td>49</td></tr>
-<tr> <td>7470401</td><td>SERVO FLEET SUPREME CI4 PLUS 15W-40</td><td>199</td><td>44</td><td>38409</td><td>15</td><td>29</td></tr>
-<tr> <td>7472401</td><td>SERVO FLEET CF4 15W-40</td><td>195</td><td>50</td><td>35931</td><td>15</td><td>35</td></tr>
-<tr> <td>7485401</td><td>SERVO SUPER 20W-40 MG</td><td>192</td><td>41</td><td>37418</td><td>25</td><td>16</td></tr>
-<tr> <td>7489401</td><td>SERVO PRIDE XL PLUS 15W-40</td><td>249</td><td>85</td><td>40639</td><td>35</td><td>50</td></tr>
-<tr> <td>7511401</td><td>SERVO GEAR SUPER 80W-90</td><td>238</td><td>72</td><td>41135</td><td>33</td><td>39</td></tr>
-<tr> <td>7515401</td><td>SERVO GEAR SUPER 85W-140</td><td>251</td><td>79</td><td>42622</td><td>33</td><td>46</td></tr>
-<tr> <td>7577401</td><td>SERVO PREMIUM CF-4 15W-40</td><td>217</td><td>68</td><td>36922</td><td>25</td><td>43</td></tr>
-<tr> <td>7705451</td><td>SERVO GREASE MP 3</td><td>330</td><td>107</td><td>47891</td><td>50</td><td>57</td></tr>
-<tr> <td>7727451</td><td>SERVO GEM RR 3</td><td>400</td><td>137</td><td>56482</td><td>50</td><td>87</td></tr>
-<tr> <td>7701451</td><td>SERVO GREASE MP</td><td>280</td><td>68</td><td>45529</td><td>40</td><td>28</td></tr>
-<tr> <td>4925401</td><td>SERVO TRANSMISSION C4 SAE 30</td><td>200</td><td>45</td><td>38409</td><td>8</td><td>37</td></tr>
-<tr> <td>7903451</td><td>SERVOGREASE MIRACLE 3</td><td>355</td><td>102</td><td>62693</td><td>50</td><td>52</td></tr>
-
+<tr><td>April</td><td>13204.8</td><td>14378</td></tr>
+<tr><td>May</td><td>22102</td><td>22927.5</td></tr>
+<tr><td>June</td><td>22434.7</td><td>26195.5</td></tr>
+<tr><td>July</td><td>19635.8</td><td>21591</td></tr>
+<tr><td>August</td><td>18938.4</td><td>27014</td></tr>
+<tr><td>September</td><td>20168.5</td><td>25202</td></tr>
+<tr><td>October</td><td>16336.4</td><td>17628</td></tr>
+<tr><td>November</td><td>30014.4</td><td>21008.5</td></tr>
+<tr><td>December</td><td>25332.9</td><td>24010.5</td></tr>
+<tr><td>January</td><td>19370</td><td>22599</td></tr>
+<tr><td>February</td><td>31608.6</td><td>31814</td></tr>
+<tr><td>March</td><td>51645.5</td><td>48629</td></tr>
+<tr><td>Grand Total</td><td>290792</td><td>302997</td></tr>
 
 
 
