--- a/portal/px-nissa/salespurchase/23-24/tga23-24.html
+++ b/portal/px-nissa/salespurchase/23-24/tga23-24.html
@@ -29,7 +29,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sales Purchase 23-24</title>
+    <title>Target Achieved 23-24</title>
     <link rel="stylesheet" href="../../../portal_files/style2.css">  
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>	
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
@@ -39,12 +39,12 @@
 <body class="index-page" data-aos-easing="ease-in-out" data-aos-duration="800" data-aos-delay="0">
     <nav>
         <div class="logo">
-            <h1>Sales Purchase 23-24</h1>
+            <h1>Target Achieved 23-24</h1>
        </div>
         	 <ul id="menuList">	
 		<p></p>
 	
-		<li><a href="tga23-24.html">Target Achieved</a></li>
+		<li><a href="smlp.html">Small Pack</a></li>
 		<li><a href="brlp.html">Barrel Price</a></li>
 		 <button class="btn btn-primary" onclick="downloadPDF()">Download PDF</button> 
 		<button class="btn btn-primary" onclick="portal.html" type="button">
@@ -179,28 +179,19 @@ th, td {
  <thead>  
 <tr>
 <th>Month</th>
-<th>Sales 23-24 Liters</th>
-<th>Primary 23-24 </th>
+<th>RO</th>
+<th>Bazaar</th>
+<th>Oem</th>
+<th>Others</th>
+<th>Total</th>
 
 </tr>
   
 </thead>
   <tbody>
   
-<tr><td>April</td><td>13204.8</td><td>14378</td></tr>
-<tr><td>May</td><td>22102</td><td>22927.5</td></tr>
-<tr><td>June</td><td>22434.7</td><td>26195.5</td></tr>
-<tr><td>July</td><td>19635.8</td><td>21591</td></tr>
-<tr><td>August</td><td>18938.4</td><td>27014</td></tr>
-<tr><td>September</td><td>20168.5</td><td>25202</td></tr>
-<tr><td>October</td><td>16336.4</td><td>17628</td></tr>
-<tr><td>November</td><td>30014.4</td><td>21008.5</td></tr>
-<tr><td>December</td><td>25332.9</td><td>24010.5</td></tr>
-<tr><td>January</td><td>19370</td><td>22599</td></tr>
-<tr><td>February</td><td>31608.6</td><td>31814</td></tr>
-<tr><td>March</td><td>51645.5</td><td>48629</td></tr>
-<tr><td>Grand Total</td><td>290792</td><td>302997</td></tr>
-
+<tr><td>FEB 23-24</td><td>15694</td><td>10489.8</td><td>5424.8</td><td>0</td><td>31608.6</td></tr>
+<tr><td>MARCH 23-24</td><td>32862.5</td><td>12596</td><td>5522</td><td>665</td><td>51645.5</td></tr>
 
 
 </tbody>
