--- a/portal/px-nissa/px-nissa-dt.html
+++ b/portal/px-nissa/px-nissa-dt.html
@@ -23,7 +23,7 @@
       <ul>
        
 	    <li><a href="../master_data/customas.html">Bazaar Master Names<i class="fas fa-caret-down"></i></a>
-		<li><a href="../px-nissa/salespurchase/23-24/sp23-24.html">Sale purchase<i class="fas fa-caret-down"></i></a>
+		<li><a href="#">Sale purchase<i class="fas fa-caret-down"></i></a>
 		<div class="dropdown-menu">
                 <ul>
 				<li><a href="../px-nissa/salespurchase/23-24/sp23-24.html">23-24</a></i>
