--- a/portal/portal.html
+++ b/portal/portal.html
@@ -41,7 +41,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
     <title>Nangkiew Irat Servo Stockist Agency</title>
     <link rel="stylesheet" href="style.css">  
-<link rel="stylesheet" href="styledr.css">  	
+<link rel="stylesheet" href="style.css">  	
 </head>
 <body class="index-page" data-aos-easing="ease-in-out" data-aos-duration="800" data-aos-delay="0">
     <nav>
