--- a/portal/px-nissa/smlp.html
+++ b/portal/px-nissa/smlp.html
@@ -87,6 +87,8 @@
         }
         
     </script>
+	
+	
 
 	<style>
 table, th, td {
@@ -183,13 +185,13 @@ th, td {
 <th>MRP/Pc</th>
 <th>DLP/Pc</th>
 <th>Disc/L</th>
-<th>Market Support /L</th>
-<th>SUMMER/ BONANZA</th>
-<th>Invoice rate/ Item	</th>
-<th>Margin/ Item</th>
+<th>M Support/L</th>
+<th>Bonanza</th>
+<th>Invoice rate</th>
+<th>Margin</th>
 <th>Margin/L</th>
-<th>Margin %</th>
-<th>PER CASE/BUC</th>
+<th>Margin%</th>
+<th>Per Case/Buc</th>
 </tr>
   
 </thead>
