--- a/portal/px-nissa/salespurchase/23-24/sp23-24.html
+++ b/portal/px-nissa/salespurchase/23-24/sp23-24.html
@@ -168,22 +168,21 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td><input type="checkbox" class="rowCheckbox"></td>
-                <td>April</td><td>13204.8</td><td>14378</td>
-            </tr>
-            <tr>
-                <td><input type="checkbox" class="rowCheckbox"></td>
-                <td>May</td><td>22102</td><td>22927.5</td>
-            </tr>
-            <tr>
-                <td><input type="checkbox" class="rowCheckbox"></td>
-                <td>June</td><td>22434.7</td><td>26195.5</td>
-            </tr>
-            <tr>
-                <td><input type="checkbox" class="rowCheckbox"></td>
-                <td>July</td><td>19635.8</td><td>21591</td>
-            </tr>
+           
+<tr><td><input type="checkbox" class="rowCheckbox"></td><td>April</td><td>13204.8</td><td>14378</td></tr>
+<tr><td><input type="checkbox" class="rowCheckbox"></td><td>May</td><td>22102</td><td>22927.5</td></tr>
+<tr><td><input type="checkbox" class="rowCheckbox"></td><td>June</td><td>22434.7</td><td>26195.5</td></tr>
+<tr><td><input type="checkbox" class="rowCheckbox"></td><td>July</td><td>19635.8</td><td>21591</td></tr>
+<tr><td><input type="checkbox" class="rowCheckbox"></td><td>August</td><td>18938.4</td><td>27014</td></tr>
+<tr><td><input type="checkbox" class="rowCheckbox"></td><td>September</td><td>20168.5</td><td>25202</td></tr>
+<tr><td><input type="checkbox" class="rowCheckbox"></td><td>October</td><td>16336.4</td><td>17628</td></tr>
+<tr><td><input type="checkbox" class="rowCheckbox"></td><td>November</td><td>30014.4</td><td>21008.5</td></tr>
+<tr><td><input type="checkbox" class="rowCheckbox"></td><td>December</td><td>25332.9</td><td>24010.5</td></tr>
+<tr><td><input type="checkbox" class="rowCheckbox"></td><td>January</td><td>19370</td><td>22599</td></tr>
+<tr><td><input type="checkbox" class="rowCheckbox"></td><td>February</td><td>31608.6</td><td>31814</td></tr>
+<tr><td><input type="checkbox" class="rowCheckbox"></td><td>March</td><td>51645.5</td><td>48629</td></tr>
+
+
             <tr class="subtotal">
                 <td colspan="2">Total</td>
                 <td id="subtotalSales">0</td>
