--- a/portal/px-nissa/salespurchase/24-25/sa24-25.html
+++ b/portal/px-nissa/salespurchase/24-25/sa24-25.html
@@ -23,7 +23,7 @@
     <!-- Main CSS File -->
     <link href="../../../portal_files/style2.css" rel="stylesheet">
 
-    <title>Sales Purchase 23-24</title>
+    <title>Sales Analys 24-25</title>
     <link rel="stylesheet" href="../../../portal_files/style2.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
@@ -139,11 +139,11 @@
 
 <nav>
     <div class="logo">
-        <h1>Sales Purchase 23-24</h1>
+        <h1>Sales Analys 24-25</h1>
     </div>
     <ul id="menuList">
-        <li><a href="../24-25/sp24-25.html">Sales Purchase 24-25</a></li>
-        <li><a href="tga23-24.html">Achoieve Target 23-24</a></li>
+        <li><a href="../23-24/sp23-24.html">Sales Purchase 23-24</a></li>
+        <li><a href="tga24-25.html">Sales Analys 24-25</a></li>
         <li><button class="btn btn-primary" onclick="downloadPDF()">Download PDF</button></li>
         <li><a href="../../../portal.html">Home</a></li>
     </ul>
@@ -161,71 +161,103 @@
     <table id="dataTable">
         <thead>
             <tr>
-                <th>Select</th>
-                <th>Month</th>
-                <th>Sales 23-24</th>
-                <th>Primary 23-24</th>
+<th>Select</th>
+<th>Month</th>
+<th>Bazaar</th>
+<th>RO</th>
+<th>OEM</th>
+<th>Fleet</th>
+<th>Others</th>
+<th>Total</th>
+
+
             </tr>
         </thead>
         <tbody>
            
-<tr><td><input type="checkbox" class="rowCheckbox"></td><td>April</td><td>13204.8</td><td>14378</td></tr>
-<tr><td><input type="checkbox" class="rowCheckbox"></td><td>May</td><td>22102</td><td>22927.5</td></tr>
-<tr><td><input type="checkbox" class="rowCheckbox"></td><td>June</td><td>22434.7</td><td>26195.5</td></tr>
-<tr><td><input type="checkbox" class="rowCheckbox"></td><td>July</td><td>19635.8</td><td>21591</td></tr>
-<tr><td><input type="checkbox" class="rowCheckbox"></td><td>August</td><td>18938.4</td><td>27014</td></tr>
-<tr><td><input type="checkbox" class="rowCheckbox"></td><td>September</td><td>20168.5</td><td>25202</td></tr>
-<tr><td><input type="checkbox" class="rowCheckbox"></td><td>October</td><td>16336.4</td><td>17628</td></tr>
-<tr><td><input type="checkbox" class="rowCheckbox"></td><td>November</td><td>30014.4</td><td>21008.5</td></tr>
-<tr><td><input type="checkbox" class="rowCheckbox"></td><td>December</td><td>25332.9</td><td>24010.5</td></tr>
-<tr><td><input type="checkbox" class="rowCheckbox"></td><td>January</td><td>19370</td><td>22599</td></tr>
-<tr><td><input type="checkbox" class="rowCheckbox"></td><td>February</td><td>31608.6</td><td>31814</td></tr>
-<tr><td><input type="checkbox" class="rowCheckbox"></td><td>March</td><td>51645.5</td><td>48629</td></tr>
+<tr><td><input type="checkbox" class="rowCheckbox"></td><td>April</td><td>13113.5</td><td>1892</td><td>2848</td><td>0</td><td>662</td><td>18515.5</td></tr>
+<tr><td><input type="checkbox" class="rowCheckbox"></td><td>May</td><td>15248.2</td><td>6077.5</td><td>2710</td><td>0</td><td>0</td><td>24035.7</td></tr>
+<tr><td><input type="checkbox" class="rowCheckbox"></td><td>June</td><td>11451.4</td><td>11581</td><td>5064</td><td>0</td><td>309</td><td>28405.4</td></tr>
+<tr><td><input type="checkbox" class="rowCheckbox"></td><td>July</td><td>6478</td><td>12921.5</td><td>3694</td><td>0</td><td>235</td><td>23328.5</td></tr>
+<tr><td><input type="checkbox" class="rowCheckbox"></td><td>August</td><td>8304.2</td><td>10206</td><td>3801.2</td><td>630</td><td>0</td><td>22941.4</td></tr>
+<tr><td><input type="checkbox" class="rowCheckbox"></td><td>September</td><td>7558.6</td><td>13379.5</td><td>3980</td><td>0</td><td>634</td><td>25552.1</td></tr>
+<tr><td><input type="checkbox" class="rowCheckbox"></td><td>October</td><td>6764.7</td><td>9125</td><td>2421</td><td>0</td><td>0</td><td>18310.7</td></tr>
+<tr><td><input type="checkbox" class="rowCheckbox"></td><td>November</td><td>6400.8</td><td>15905</td><td>3930</td><td>0</td><td>0</td><td>26235.8</td></tr>
+<tr><td><input type="checkbox" class="rowCheckbox"></td><td>December</td><td>9282.1</td><td>16199.5</td><td>4016.8</td><td>0</td><td>0</td><td>29498.4</td></tr>
+<tr><td><input type="checkbox" class="rowCheckbox"></td><td>January</td><td>10634.3</td><td>13557</td><td>2896</td><td>0</td><td>0</td><td>27087.3</td></tr>
+<tr><td><input type="checkbox" class="rowCheckbox"></td><td>February</td><td>10001.1</td><td>22740</td><td>2036</td><td>0</td><td>0</td><td>34777.1</td></tr>
+<tr><td><input type="checkbox" class="rowCheckbox"></td><td>March</td><td></td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
+
+
+
+
+
 
 
             <tr class="subtotal">
-                <td colspan="2">Total</td>
-                <td id="subtotalSales">0</td>
-                <td id="subtotalPrimary">0</td>
-            </tr>
+    <td colspan="2">SubTotal</td>
+    <td id="subtotalBazaar">0</td> <!-- Subtotal for Target -->
+    <td id="subtotalRO">0</td> <!-- Subtotal for Base -->
+    <td id="subtotalOEM">0</td> <!-- Subtotal for Sales 23-24 -->
+    <td id="subtotalFleet">0</td> <!-- Subtotal for Primary 23-24 -->
+	<td id="subtotalOthers">0</td> <!-- Subtotal for Primary 23-24 -->
+	<td id="subtotalTotal">0</td> <!-- Subtotal for Primary 23-24 -->
+</tr>
         </tbody>
     </table>
 </div>
 
 <script>
-    // Function to filter the table rows and calculate the subtotal
-    function filterTable() {
-        const searchBox = document.getElementById('searchBox');
-        const filter = searchBox.value.toUpperCase();
-        const table = document.getElementById('dataTable');
-        const rows = table.getElementsByTagName('tr');
-        let subtotalSales = 0;
-        let subtotalPrimary = 0;
+ function filterTable() {
+    const searchBox = document.getElementById('searchBox');
+    const filter = searchBox.value.toUpperCase();
+    const table = document.getElementById('dataTable');
+    const rows = table.getElementsByTagName('tr');
+    let subtotalBazaar = 0;
+    let subtotalRO = 0;
+    let subtotalOEM = 0;
+    let subtotalFleet = 0;
+	let subtotalOthers = 0;
+	let subtotalTotal = 0;
 
-        // Loop through all table rows (except the header and subtotal row)
-        for (let i = 1; i < rows.length - 1; i++) {
-            const cellA = rows[i].getElementsByTagName('td')[1]; // Column A
-            const cellB = rows[i].getElementsByTagName('td')[2]; // Column B (Sales 23-24 Liters)
-            const cellC = rows[i].getElementsByTagName('td')[3]; // Column C (Primary 23-24)
-            const checkbox = rows[i].querySelector('.rowCheckbox'); // Checkbox
-            if (cellA && cellB && cellC) {
-                const textValue = cellA.textContent || cellA.innerText;
-                if (textValue.toUpperCase().indexOf(filter) > -1) {
-                    rows[i].style.display = ''; // Show the row
-                    if (checkbox.checked) {
-                        subtotalSales += parseFloat(cellB.textContent || cellB.innerText); // Add to subtotal for Sales
-                        subtotalPrimary += parseFloat(cellC.textContent || cellC.innerText); // Add to subtotal for Primary
-                    }
-                } else {
-                    rows[i].style.display = 'none'; // Hide the row
+    // Loop through all table rows (except the header and subtotal row)
+    for (let i = 1; i < rows.length - 1; i++) {
+        const cellA = rows[i].getElementsByTagName('td')[1]; // Column A (Month)
+        const cellB = rows[i].getElementsByTagName('td')[2]; // Column B (Target)
+        const cellC = rows[i].getElementsByTagName('td')[3]; // Column C (Base)
+        const cellD = rows[i].getElementsByTagName('td')[4]; // Column D (Sales 23-24)
+        const cellE = rows[i].getElementsByTagName('td')[5]; // Column E (Primary 23-24)
+	    const cellF = rows[i].getElementsByTagName('td')[6]; // Column F (Primary 23-24)
+		const cellG = rows[i].getElementsByTagName('td')[7]; // Column G (Primary 23-24)
+        const checkbox = rows[i].querySelector('.rowCheckbox'); // Checkbox
+
+        if (cellA && cellB && cellC && cellD && cellE && cellF && cellG) {
+            const textValue = cellA.textContent || cellA.innerText;
+            if (textValue.toUpperCase().indexOf(filter) > -1) {
+                rows[i].style.display = ''; // Show the row
+                if (checkbox.checked) {
+                    subtotalBazaar += parseFloat(cellB.textContent || cellB.innerText) || 0; // Add to subtotal for Target
+                    subtotalRO += parseFloat(cellC.textContent || cellC.innerText) || 0; // Add to subtotal for Base
+                    subtotalOEM += parseFloat(cellD.textContent || cellD.innerText) || 0; // Add to subtotal for Sales
+                    subtotalFleet += parseFloat(cellE.textContent || cellE.innerText) || 0; // Add to subtotal for Primary
+					subtotalOthers += parseFloat(cellF.textContent || cellF.innerText) || 0; // Add to subtotal for Primary
+					subtotalTotal += parseFloat(cellG.textContent || cellG.innerText) || 0; // Add to subtotal for Primary
+				
                 }
+            } else {
+                rows[i].style.display = 'none'; // Hide the row
             }
         }
-
-        // Update the subtotal values
-        document.getElementById('subtotalSales').textContent = subtotalSales.toFixed(2);
-        document.getElementById('subtotalPrimary').textContent = subtotalPrimary.toFixed(2);
     }
+
+    // Update the subtotal values
+    document.getElementById('subtotalBazaar').textContent = subtotalBazaar.toFixed(2);
+    document.getElementById('subtotalRO').textContent = subtotalRO.toFixed(2);
+    document.getElementById('subtotalOEM').textContent = subtotalOEM.toFixed(2);
+    document.getElementById('subtotalFleet').textContent = subtotalFleet.toFixed(2);
+	document.getElementById('subtotalOthers').textContent = subtotalOthers.toFixed(2);
+	document.getElementById('subtotalTotal').textContent = subtotalTotal.toFixed(2);
+}
 
     // Function to handle checkbox clicks
     function handleCheckboxClick() {
