--- a/portal/px-nissa/px-nissa-dt.html
+++ b/portal/px-nissa/px-nissa-dt.html
@@ -189,7 +189,7 @@
                     <div class="dropdown-menu">
                         <ul>
                             <li><a href="../px-nissa/salespurchase/23-24/sp23-24.html">23-24</a></li>
-                            <li><a href="#">n</a></li>
+                            <li><a href="../px-nissa/salespurchase/24-25/sp24-25.html">24-25</a></li>
                             <li><a href="#">n</a></li>
                             <li><a href="#">n</a></li>
                         </ul>
