--- a/portal/px-nissa/salespurchase/23-24/sa23-24.html
+++ b/portal/px-nissa/salespurchase/23-24/sa23-24.html
@@ -29,7 +29,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Target Achieved 23-24</title>
+    <title>Sales Analys 23-24</title>
     <link rel="stylesheet" href="../../../portal_files/style2.css">  
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>	
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
@@ -39,13 +39,13 @@
 <body class="index-page" data-aos-easing="ease-in-out" data-aos-duration="800" data-aos-delay="0">
     <nav>
         <div class="logo">
-            <h1>Target Achieved 23-24</h1>
+            <h1>Sales Analys 23-24</h1>
        </div>
         	 <ul id="menuList">	
 		<p></p>
 	
-		<li><a href="smlp.html">Small Pack</a></li>
-		<li><a href="brlp.html">Barrel Price</a></li>
+		<li><a href="sp23-24.html">Sales Purchase 23-24</a></li>
+		<li><a href="#">N</a></li>
 		 <button class="btn btn-primary" onclick="downloadPDF()">Download PDF</button> 
 		<button class="btn btn-primary" onclick="portal.html" type="button">
             <li><a href="../../../portal.html">Home</a></li>
