--- a/portal/px-nissa/salespurchase/23-24/sp23-24.html
+++ b/portal/px-nissa/salespurchase/23-24/sp23-24.html
@@ -142,8 +142,9 @@
         <h1>Sales Purchase 23-24</h1>
     </div>
     <ul id="menuList">
-        <li><a href="../24-25/sp24-25.html">Sales Purchase 24-25</a></li>
-        <li><a href="tga23-24.html">Achoieve Target 23-24</a></li>
+       
+        <li><a href="sa23-24.html">Sales Analys 23-24</a></li>
+		 <li><a href="#">N</a></li>
         <li><button class="btn btn-primary" onclick="downloadPDF()">Download PDF</button></li>
         <li><a href="../../../portal.html">Home</a></li>
     </ul>
