--- a/portal/px-nissa/salespurchase/24-25/sa24-25.html
+++ b/portal/px-nissa/salespurchase/24-25/sa24-25.html
@@ -142,8 +142,8 @@
         <h1>Sales Analys 24-25</h1>
     </div>
     <ul id="menuList">
-        <li><a href="../23-24/sp23-24.html">Sales Purchase 23-24</a></li>
-        <li><a href="tga24-25.html">Sales Analys 24-25</a></li>
+        <li><a href="sp24-25.html">Sales Purchase 24-25</a></li>
+        <li><a href="#">N</a></li>
         <li><button class="btn btn-primary" onclick="downloadPDF()">Download PDF</button></li>
         <li><a href="../../../portal.html">Home</a></li>
     </ul>
